--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -38,15 +38,6 @@
 	</div>
 	<!-- Top right elements end -->
 
-	<div class="jumbotron">
-		<h1 class="display-4">Hello, world!</h1>
-		<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-		<hr class="my-4">
-		<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-		<p class="lead">
-		  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-		</p>
-	  </div>
 
 	<div class="main-warp">
 		<!-- header section -->
@@ -62,7 +53,7 @@
 					<li><a href="./index.html">Profil Miawu</a></li>
 					<li><a href="./galeri.html">Galeri</a></li>
 					<li><a href="./daftar-acara.html">Daftar Acara</a></li>
-					<li><a href="./info-acara.html">Info Acara</a></li>
+					<!-- <li><a href="./info-acara.html">Info Acara</a></li> -->
 					<li class="active"><a href="./daftar-pangkat.html">Daftar Pangkat</a></li>
 					<li><a href="./kontak.html">Para Pengurus</a></li>
 				</ul>
