--- a/kontak.html
+++ b/kontak.html
@@ -133,7 +133,7 @@
 			  <i class="fa fa-mars fa-2x" aria-hidden="true"></i>
               <h2>Aslam</h2>
               <!-- <div class="title title--epic">Tikus Gabut ter-Mantap</div> -->
-			  <div class="desc">Halo aku Aslam dari gugus 21.</div>
+			  <div class="desc">Hy Mniez.</div>
 			  <img src="img/aslam.png"/>
                 <div class="actions">
                 <button></button>
