--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<li><span>ID</span>1147896</li>
 								<li><span>Region</span>Indonesia (ID/IDN)</li>
 								<li><span>Date</span>09/04/2020</li>
-								<li><span>Members</span>140</li>
+								<li><span>Member</span>140</li>
 							</ul>
 						</div>
 					</div>
