--- a/kontak.html
+++ b/kontak.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
-              <h2>Miak</h2>
+              <h2>Mia</h2>
               <!-- <div class="title title--owner">Tikus Sombong</div> -->
 			  <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
 			  <img src="img/mia.png"/>
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
-              <h2>Brendod</h2>
+              <h2>Spieky</h2>
               <!-- <div class="title title--legendary">Tikus Xixixi</div> -->
 			  <div class="desc">ML Mantap.</div>
 			  <img src="img/brendod.png"/>
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
-              <h2>Rwrw</h2>
+              <h2>Ruru</h2>
               <!-- <div class="title title--epic">Tikus Gembul</div> -->
 			  <div class="desc">Aku ndak suka ABR.</div>
 			  <img src="img/ruru.png"/>
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="card">
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
-              <h2>Minek</h2>
+              <h2>Jasmine</h2>
               <!-- <div class="title title--epic">Tikus Kelainan</div> -->
 			  <div class="desc">Sandi.</div>
 			  <img src="img/minek.png"/>
