--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -9,7 +9,9 @@
 
 	<!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
-    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
 	<!-- Stylesheets -->
@@ -37,6 +39,7 @@
 		</div>
 	</div>
 	<!-- Top right elements end -->
+
 
 
 	<div class="main-warp">
