--- a/galeri.html
+++ b/galeri.html
@@ -21,6 +21,87 @@
 	<!-- Main Stylesheets -->
 	<link rel="stylesheet" href="css/style.css"/>
 
+	<style>
+		* {box-sizing: border-box;}
+		
+		.img-magnifier-container {
+		  position:relative;
+		}
+		
+		.img-magnifier-glass {
+		  position: absolute;
+		  border: 3px solid #000;
+		  border-radius: 50%;
+		  cursor: none;
+		  /*Set the size of the magnifier glass:*/
+		  width: 100px;
+		  height: 100px;
+		}
+	</style>
+
+	<script>
+		function magnify(imgID, zoom) {
+		var img, glass, w, h, bw;
+		img = document.getElementById(imgID);
+
+		/* Create magnifier glass: */
+		glass = document.createElement("DIV");
+		glass.setAttribute("class", "img-magnifier-glass");
+
+		/* Insert magnifier glass: */
+		img.parentElement.insertBefore(glass, img);
+
+		/* Set background properties for the magnifier glass: */
+		glass.style.backgroundImage = "url('" + img.src + "')";
+		glass.style.backgroundRepeat = "no-repeat";
+		glass.style.backgroundSize = (img.width * zoom) + "px " + (img.height * zoom) + "px";
+		bw = 3;
+		w = glass.offsetWidth / 2;
+		h = glass.offsetHeight / 2;
+
+		/* Execute a function when someone moves the magnifier glass over the image: */
+		glass.addEventListener("mousemove", moveMagnifier);
+		img.addEventListener("mousemove", moveMagnifier);
+
+		/*and also for touch screens:*/
+		glass.addEventListener("touchmove", moveMagnifier);
+		img.addEventListener("touchmove", moveMagnifier);
+		function moveMagnifier(e) {
+			var pos, x, y;
+			/* Prevent any other actions that may occur when moving over the image */
+			e.preventDefault();
+			/* Get the cursor's x and y positions: */
+			pos = getCursorPos(e);
+			x = pos.x;
+			y = pos.y;
+			/* Prevent the magnifier glass from being positioned outside the image: */
+			if (x > img.width - (w / zoom)) {x = img.width - (w / zoom);}
+			if (x < w / zoom) {x = w / zoom;}
+			if (y > img.height - (h / zoom)) {y = img.height - (h / zoom);}
+			if (y < h / zoom) {y = h / zoom;}
+			/* Set the position of the magnifier glass: */
+			glass.style.left = (x - w) + "px";
+			glass.style.top = (y - h) + "px";
+			/* Display what the magnifier glass "sees": */
+			glass.style.backgroundPosition = "-" + ((x * zoom) - w + bw) + "px -" + ((y * zoom) - h + bw) + "px";
+		}
+
+		function getCursorPos(e) {
+			var a, x = 0, y = 0;
+			e = e || window.event;
+			/* Get the x and y positions of the image: */
+			a = img.getBoundingClientRect();
+			/* Calculate the cursor's x and y coordinates, relative to the image: */
+			x = e.pageX - a.left;
+			y = e.pageY - a.top;
+			/* Consider any page scrolling: */
+			x = x - window.pageXOffset;
+			y = y - window.pageYOffset;
+			return {x : x, y : y};
+		}
+		}
+	</script>
+
 </head>
 <body>
 	<!-- Page Preloder -->
@@ -69,97 +150,97 @@
 			</ul>
 			<div class="portfolio-gallery">
 				<div class="gallery-item logo">
-					<img src="img/unknown.png" alt="">
+					<img src="img/event/miawu-logo.png" alt="Miawu_Logo">
 					<div class="hover-links">
 						<h2>Miawu Logo</h2>
 					</div>
 				</div>
 				<div class="gallery-item logo">
-					<img src="img/miawu-id.png" alt="">
+					<img src="img/event/miawu-id.png" alt="">
 					<div class="hover-links">
 						<center><h3>Miawu Logo - with Flag</h3></center>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/fs-event-camp-1.png" alt="">
+					<img src="img/event/fs-event-camp-1.png" alt="First_Event_Camp">
 					<div class="hover-links">
 						<p>Camp - 1</p>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/fs-event-camp-2.png" alt="">
+					<img src="img/event/fs-event-camp-2.png" alt="">
 					<div class="hover-links">
 						<p>Camp - 2</p>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/lomba-racing-burlas.png" alt="">
+					<img src="img/event/lomba-racing-burlas.png" alt="">
 					<div class="hover-links">
 						<p>First Event - Racing</p>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/fs-event-racing-win.png" alt="">
+					<img src="img/event/fs-event-racing-win.png" alt="">
 					<div class="hover-links">
 						<center><p>First Event - Racing Winner<br><font color="red">Shoukouu</font></p></center>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/fs-event-tanyajawab.png" alt="">
+					<img src="img/event/fs-event-tanyajawab.png" alt="">
 					<div class="hover-links">
 						<center><p>First Event - Tanya Jawab</p></center>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/fs-event-survivor.png" alt="">
+					<img src="img/event/fs-event-survivor.png" alt="">
 					<div class="hover-links">
 						<center><p>First Event - Survivor</p></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-1.png" alt="">
+					<img src="img/event/lomba-gambar-1.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Onetime#8401</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-2.png" alt="">
+					<img src="img/event/lomba-gambar-2.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Verox1#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-3.png" alt="">
+					<img src="img/event/lomba-gambar-3.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Imnoob#5424</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-4.png" alt="">
+					<img src="img/event/lomba-gambar-4.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Daniimuts#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-5.png" alt="">
+					<img src="img/event/lomba-gambar-5.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Adamjuz#9960</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-6.png" alt="">
+					<img src="img/event/lomba-gambar-6.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Angelmnzz#3256</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-7.png" alt="">
+					<img src="img/event/lomba-gambar-7.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Spieky#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/lomba-gambar-8.png" alt="">
+					<img src="img/event/lomba-gambar-8.png" alt="">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Yama#2676</p></font></center>
 					</div>
@@ -181,12 +262,12 @@
 	<script src="js/main.js"></script>
 
 	<script>
-		// When the user clicks on div, open the popup
-		function myFunction() {
-		var popup = document.getElementById("myPopup");
-		popup.classList.toggle("show");
-		}
+		/* Initiate Magnify Function
+		with the id of the image, and the strength of the magnifier glass:*/
+		magnify("myimage", 1);
+		magnify("myimage2", 3);
 	</script>
+	
 
 	</body>
 </html>
