--- a/daftar-acara.html
+++ b/daftar-acara.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/miawuk.png" rel="shortcut icon"/>
+	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
@@ -47,7 +47,7 @@
 			</div>
 			<div class="header-warp">
 				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
-					<img src="img/miawu-removed.png" alt="Miawu">
+					<img src="img/event/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li><a href="./index.html">Profil Miawu</a></li>
