--- a/galeri.html
+++ b/galeri.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/miawuk.png" rel="shortcut icon"/>
+	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
@@ -127,7 +127,7 @@
 			</div>
 			<div class="header-warp">
 				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
-					<img src="img/miawu-removed.png" alt="Miawu">
+					<img src="img/event/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li><a href="./index.html">Profil Miawu</a></li>
@@ -162,85 +162,85 @@
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/event/fs-event-camp-1.png" alt="First_Event_Camp">
+					<img src="img/event/fs-event-camp-1.png" alt="First_Event_Camp-1">
 					<div class="hover-links">
 						<p>Camp - 1</p>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/event/fs-event-camp-2.png" alt="">
+					<img src="img/event/fs-event-camp-2.png" alt="First_Event_Camp-2">
 					<div class="hover-links">
 						<p>Camp - 2</p>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/event/lomba-racing-burlas.png" alt="">
+					<img src="img/event/lomba-racing-burlas.png" alt="First_Event_Racing">
 					<div class="hover-links">
 						<p>First Event - Racing</p>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/event/fs-event-racing-win.png" alt="">
+					<img src="img/event/fs-event-racing-win.png" alt="First_Event_Racing-Winner">
 					<div class="hover-links">
 						<center><p>First Event - Racing Winner<br><font color="red">Shoukouu</font></p></center>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/event/fs-event-tanyajawab.png" alt="">
+					<img src="img/event/fs-event-tanyajawab.png" alt="First_Event_TanyaJawab">
 					<div class="hover-links">
 						<center><p>First Event - Tanya Jawab</p></center>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
-					<img src="img/event/fs-event-survivor.png" alt="">
+					<img src="img/event/fs-event-survivor.png" alt="First_Event_Survivor">
 					<div class="hover-links">
 						<center><p>First Event - Survivor</p></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-1.png" alt="">
+					<img src="img/event/lomba-gambar-1.png" alt="17an-Gambar-1">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Onetime#8401</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-2.png" alt="">
+					<img src="img/event/lomba-gambar-2.png" alt="17an-Gambar-2">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Verox1#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-3.png" alt="">
+					<img src="img/event/lomba-gambar-3.png" alt="17an-Gambar-3">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Imnoob#5424</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-4.png" alt="">
+					<img src="img/event/lomba-gambar-4.png" alt="17an-Gambar-4">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Daniimuts#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-5.png" alt="">
+					<img src="img/event/lomba-gambar-5.png" alt="17an-Gambar-5">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Adamjuz#9960</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-6.png" alt="">
+					<img src="img/event/lomba-gambar-6.png" alt="17an-Gambar-6">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Angelmnzz#3256</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-7.png" alt="">
+					<img src="img/event/lomba-gambar-7.png" alt="17an-Gambar-7">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Spieky#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
-					<img src="img/event/lomba-gambar-8.png" alt="">
+					<img src="img/event/lomba-gambar-8.png" alt="17an-Gambar-8">
 					<div class="hover-links">
 						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Yama#2676</p></font></center>
 					</div>
