--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/miawuk.png" rel="shortcut icon"/>
+	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
@@ -46,7 +46,7 @@
 			</div>
 			<div class="header-warp">
 				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
-					<img src="img/miawu-removed.png" alt="Miawu">
+					<img src="img/event/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li class="active"><a href="./index.html">Profil Miawu</a></li>
@@ -64,7 +64,7 @@
 			<div class="gallery-single-warp">
 				<div class="row">
 					<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank">
-						<img src="img/miawu-removed.png" alt="Miawu">
+						<img src="img/event/miawu-removed.png" alt="Miawu">
 					</a>
 					<div class="col-xl-6 p-0">
 						<div class="gallery-single-text">
