--- a/kontak.html
+++ b/kontak.html
@@ -5,7 +5,7 @@
 	<meta name="keywords" content="html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link href="img/miawuk.png" rel="shortcut icon"/>
+	<link href="img/event/miawuk.png" rel="shortcut icon"/>
 
 	<!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
@@ -46,7 +46,7 @@
 			</div>
 			<div class="header-warp">
 				<a href="https://cheese.formice.com/transformice/tribe/1147896" target="_blank" class="site-logo">
-					<img src="img/miawu-removed.png" alt="Miawu">
+					<img src="img/event/miawu-removed.png" alt="Miawu">
 				</a>
 				<ul class="main-menu">
 					<li><a href="./index.html">Profil Miawu</a></li>
@@ -67,7 +67,7 @@
               <h2>Mia</h2>
               <!-- <div class="title title--owner">Tikus Sombong</div> -->
 			  <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
-			  <img src="img/mia.png"/>
+			  <img src="img/event/mia.png"/>
                 <div class="actions">
                 <a href="https://instagram.com/jeromepolin" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://twitter.com/jeromepolin" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
@@ -81,7 +81,7 @@
               <h2>Spieky</h2>
               <!-- <div class="title title--legendary">Tikus Xixixi</div> -->
 			  <div class="desc">ML Mantap.</div>
-			  <img src="img/brendod.png"/>
+			  <img src="img/event/brendod.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -94,7 +94,7 @@
               <h2>Ruru</h2>
               <!-- <div class="title title--epic">Tikus Gembul</div> -->
 			  <div class="desc">Aku ndak suka ABR.</div>
-			  <img src="img/ruru.png"/>
+			  <img src="img/event/ruru.png"/>
                 <div class="actions">
 				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
 				<button></button>
@@ -108,7 +108,7 @@
               <h2>Jasmine</h2>
               <!-- <div class="title title--epic">Tikus Kelainan</div> -->
 			  <div class="desc">Sandi.</div>
-			  <img src="img/minek.png"/>
+			  <img src="img/event/minek.png"/>
                 <div class="actions">
 				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -121,7 +121,7 @@
               <h2>Alice</h2>
               <!-- <div class="title title--epic">Tikus Mantap</div> -->
 			  <div class="desc">Halo aku Alis dari gugus 20.</div>
-			  <img src="img/alice.png"/>
+			  <img src="img/event/alice.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -134,7 +134,7 @@
               <h2>Aslam</h2>
               <!-- <div class="title title--epic">Tikus Gabut ter-Mantap</div> -->
 			  <div class="desc">Hy Mniez.</div>
-			  <img src="img/aslam.png"/>
+			  <img src="img/event/aslam.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -147,7 +147,7 @@
               <h2>Wilson</h2>
               <!-- <div class="title title--servicer">Tikus Wu</div> -->
               <div class="desc">我很好.</div>
-			  <img src="img/wilson.png"/>
+			  <img src="img/event/wilson.png"/>
                 <div class="actions">
 				<a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				<button></button>
@@ -161,7 +161,7 @@
               <h2>Reighpuy</h2>
               <!-- <div class="title title--servicer">Sarden</div> -->
               <div class="desc">Hah?</div>
-			<img src="img/dapi.png"/>
+			<img src="img/event/dapi.png"/>
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
