--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -70,7 +70,7 @@
 			  <a href="https://google.com">
 				  <div class="title title--1">Mantap xxx</div>
 			  </a>
-              <div class="desc"><b>Pemimpin.</b><br>- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Mengeluarkan Anggota.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
+              <div class="desc"><b>Pemimpin</b><br>• Mengubah Pesan Pembuka<br>• Mengubah Pangkat<br>• Mengubah Pangkat Anggota<br>• Mengundang Anggota Baru<br>• Mengeluarkan Anggota<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forum</div>
             </div>
         </div>
         <div class="container">
