--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -76,49 +76,49 @@
         <div class="container">
             <div class="card">
               <div class="title title--2">Sayangku</div>
-              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Mengeluarkan Anggota.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
+              <div class="desc">• Mengubah Pesan Pembuka<br>• Mengubah Pangkat<br>• Mengubah Pangkat Anggota<br>• Mengundang Anggota Baru<br>• Mengeluarkan Anggota<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forum</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--3">Gay</div>
-              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
+              <div class="desc">• Mengubah Pesan Pembuka<br>• Mengubah Pangkat Anggota<br>• Mengundang Anggota Baru<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forum</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--3">Ccd</div>
-              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
+              <div class="desc">• Mengubah Pesan Pembuka<br>• Mengundang Anggota Baru<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forum</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantapppp</div>
-              <div class="desc">- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
+              <div class="desc">• Mengundang Anggota Baru<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forim</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantappp</div>
-              <div class="desc">- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).</div>
+              <div class="desc">• Mengundang Anggota Baru<br>• Memaikan Musik<br>• mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantapp</div>
-              <div class="desc">- Mengundang Anggota Baru.<br>- Membuat sebuah Peta (/np @kode).</div>
+              <div class="desc">• Mengundang Anggota Baru<br>• Membuat sebuah Peta (/np @kode)</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantap</div>
-              <div class="desc">- Membuat sebuah Peta (/np @kode).</div>
+              <div class="desc">• Membuat sebuah Peta (/np @kode)</div>
             </div>
         </div>
         <div class="container">
             <div class="card">
               <div class="title title--5">Gwd</div>
-              <div class="desc">- No One :(</div>
+              <div class="desc">• None :(</div>
             </div>
         </div>
     <!---->
