--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -94,7 +94,7 @@
         <div class="container">
             <div class="card">
               <div class="title title--4">Mantapppp</div>
-              <div class="desc">• Mengundang Anggota Baru<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forim</div>
+              <div class="desc">• Mengundang Anggota Baru<br>• Memaikan Musik<br>• Mengubah peta Rumah Suku<br>• Membuat sebuah Peta (/np @kode)<br>• Mengelola Forum</div>
             </div>
         </div>
         <div class="container">
