--- a/kontak.html
+++ b/kontak.html
@@ -81,7 +81,7 @@
               <h2>Spieky</h2>
               <!-- <div class="title title--legendary">Tikus Xixixi</div> -->
 			  <div class="desc">ML Mantap.</div>
-			  <img src="img/event/brendod.png"/>
+			  <img src="img/curut/brendod.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -94,7 +94,7 @@
               <h2>Ruru</h2>
               <!-- <div class="title title--epic">Tikus Gembul</div> -->
 			  <div class="desc">Aku ndak suka ABR.</div>
-			  <img src="img/event/ruru.png"/>
+			  <img src="img/curut/ruru.png"/>
                 <div class="actions">
 				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
 				<button></button>
@@ -108,7 +108,7 @@
               <h2>Jasmine</h2>
               <!-- <div class="title title--epic">Tikus Kelainan</div> -->
 			  <div class="desc">Sandi.</div>
-			  <img src="img/event/minek.png"/>
+			  <img src="img/curut/minek.png"/>
                 <div class="actions">
 				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -121,7 +121,7 @@
               <h2>Alice</h2>
               <!-- <div class="title title--epic">Tikus Mantap</div> -->
 			  <div class="desc">Halo aku Alis dari gugus 20.</div>
-			  <img src="img/event/alice.png"/>
+			  <img src="img/curut/alice.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -134,7 +134,7 @@
               <h2>Aslam</h2>
               <!-- <div class="title title--epic">Tikus Gabut ter-Mantap</div> -->
 			  <div class="desc">Hy Mniez.</div>
-			  <img src="img/event/aslam.png"/>
+			  <img src="img/curut/aslam.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -147,7 +147,7 @@
               <h2>Wilson</h2>
               <!-- <div class="title title--servicer">Tikus Wu</div> -->
               <div class="desc">我很好.</div>
-			  <img src="img/event/wilson.png"/>
+			  <img src="img/curut/wilson.png"/>
                 <div class="actions">
 				<a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				<button></button>
@@ -161,7 +161,7 @@
               <h2>Reighpuy</h2>
               <!-- <div class="title title--servicer">Sarden</div> -->
               <div class="desc">Hah?</div>
-			<img src="img/event/dapi.png"/>
+			<img src="img/curut/dapi.png"/>
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
