--- a/kontak.html
+++ b/kontak.html
@@ -80,7 +80,7 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Spieky</h2>
               <!-- <div class="title title--legendary">Tikus Xixixi</div> -->
-			  <div class="desc">ML Mantap.</div>
+			  <div class="desc">Nurut atau saya kick</div>
 			  <img width="150" height="200" img src="img/curut/brendod.png"/>
                 <div class="actions">
                 <button></button>
