--- a/kontak.html
+++ b/kontak.html
@@ -93,7 +93,7 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Ruru</h2>
               <!-- <div class="title title--epic">Tikus Gembul</div> -->
-			  <div class="desc">Aku ndak suka ABR.</div>
+			  <div class="desc">Aku ndak suka ABR</div>
 			  <img width="170" height="200" img src="img/curut/ruru.png"/>
                 <div class="actions">
 				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
@@ -120,7 +120,7 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Alice</h2>
               <!-- <div class="title title--epic">Tikus Mantap</div> -->
-			  <div class="desc">Halo aku Alis dari gugus 20.</div>
+			  <div class="desc">Halo, aku Alis dari gugus 69</div>
 			  <img width="180" height="200" img src="img/curut/alice.png"/>
                 <div class="actions">
                 <button></button>
