--- a/daftar-pangkat.html
+++ b/daftar-pangkat.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
 	<!-- Stylesheets -->
@@ -40,8 +39,6 @@
 	</div>
 	<!-- Top right elements end -->
 
-
-
 	<div class="main-warp">
 		<!-- header section -->
 		<header class="header-section">
@@ -64,63 +61,33 @@
 		</header>
 		<!-- header section end -->
 
+	<div class="container">
+
+
 		<!-- Daftar Pangkat -->
-        <div class="container">
-            <div class="card">
-			  <a href="https://google.com">
-				  <div class="title title--1">Mantap xxx</div>
-			  </a>
-              <div class="desc"><b>Pemimpin.</b><br>- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Mengeluarkan Anggota.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--2">Sayangku</div>
-              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Mengeluarkan Anggota.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--3">Gay</div>
-              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengubah Pangkat Anggota.<br>- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--3">Ccd</div>
-              <div class="desc">- Mengubah Pesan Pembuka.<br>- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--4">Mantapppp</div>
-              <div class="desc">- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- Mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).<br>- Mengelola Form</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--4">Mantappp</div>
-              <div class="desc">- Mengundang Anggota Baru.<br>- Memaikan Musik.<br>- mengubah peta Rumah Suku.<br>- Membuat sebuah Peta (/np @kode).</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--4">Mantapp</div>
-              <div class="desc">- Mengundang Anggota Baru.<br>- Membuat sebuah Peta (/np @kode).</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--4">Mantap</div>
-              <div class="desc">- Membuat sebuah Peta (/np @kode).</div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="card">
-              <div class="title title--5">Gwd</div>
-              <div class="desc">- No One :(</div>
-            </div>
-        </div>
+		<center><br><div class="card" style="width: 16rem;">
+			<img class="card-img-top" src="https://cdn.discordapp.com/attachments/707427305701507092/746232865171308615/emot1tfm.png" alt="Card image cap">
+			<div class="card-body">
+			  <h5 class="card-title">MANTAP XXX</h5>
+			  <p class="card-text">Hak-hak yang dimiliki Pangkat ini yaitu :</p>
+			  <button class="dialog__trigger">MANTAP XXX</button>
+				<div class="dialog">
+				<span class="dialog__close">&#x2715;</span>
+				<h3 class="dialog__title">MANTAP XXX &#128151</h3>
+				<p class="dialog__content">
+					<b>Pemimpin.</b>
+					<br>- Mengubah Pesan Pembuka.
+					<br>- Mengubah Pangkat.
+					<br>- Mengubah Pangkat Anggota.
+					<br>- Mengundang Anggota Baru.
+					<br>- Mengeluarkan Anggota.
+					<br>- Memaikan Musik.
+					<br>- Mengubah peta Rumah Suku.
+					<br>- Membuat sebuah Peta (/np @kode).
+					<br>- Mengelola Form.</p>
+				</div>
+			</div>
+		</div></center>
     <!---->
 	</div>
 
@@ -133,6 +100,50 @@
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/circle-progress.min.js"></script>
 	<script src="js/main.js"></script>
+
+	<script>
+		function dialog() {
+
+		// Declare variables
+		var dialogBox = $('.dialog'),
+			dialogTrigger = $('.dialog__trigger'),
+			dialogClose = $('.dialog__close'),
+			dialogTitle = $('.dialog__title'),
+			dialogContent = $('.dialog__content'),
+			dialogAction = $('.dialog__action');
+
+		// Open the dialog
+		dialogTrigger.on('click', function(e) {
+		dialogBox.toggleClass('dialog--active');
+		e.stopPropagation();
+		});
+
+		// Close the dialog - click close button
+		dialogClose.on('click', function() {
+		dialogBox.removeClass('dialog--active');
+		});
+
+		// Close the dialog - press escape key // key#27
+		$(document).keyup(function(e) {
+		if (e.keyCode === 27) {
+			dialogBox.removeClass('dialog--active');
+		}
+		});
+
+		// Close the dialog - click outside
+		$(document).on('click', function(e) {
+		if ($(e.target).is(dialogBox) === false &&
+			$(e.target).is(dialogTitle) === false &&
+			$(e.target).is(dialogContent) === false &&
+			$(e.target).is(dialogAction) === false) {
+			dialogBox.removeClass('dialog--active');   
+		}
+		});
+
+		}
+		// Run function
+		$(dialog);
+	</script>
 
 </body>
 </html>
