--- a/kontak.html
+++ b/kontak.html
@@ -67,11 +67,10 @@
               <h2>Mia</h2>
               <!-- <div class="title title--owner">Tikus Sombong</div> -->
 			  <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
-			  <img src="img/event/mia.png"/>
+			  <img width="170" height="180" src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/mia.png"/>
                 <div class="actions">
-                <a href="https://instagram.com/jeromepolin" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/jeromepolin" target="_blank"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
-                <a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+					<button></button>
+                	<a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -80,11 +79,11 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Spieky</h2>
               <!-- <div class="title title--legendary">Tikus Xixixi</div> -->
-			  <div class="desc">ML Mantap.</div>
-			  <img src="img/event/brendod.png"/>
+			  <div class="desc">Nurut atau saya kick</div>
+			  <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/brendod.png"/>
                 <div class="actions">
-                <button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<button></button>
+                	<a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -93,10 +92,9 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Ruru</h2>
               <!-- <div class="title title--epic">Tikus Gembul</div> -->
-			  <div class="desc">Aku ndak suka ABR.</div>
-			  <img src="img/event/ruru.png"/>
+			  <div class="desc">Aku ndak suka ABR</div>
+			  <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/ruru.png"/>
                 <div class="actions">
-				<a href="https://instagram.com/t_rash.exe" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
 				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/ruru%231623" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
@@ -108,7 +106,7 @@
               <h2>Jasmine</h2>
               <!-- <div class="title title--epic">Tikus Kelainan</div> -->
 			  <div class="desc">Sandi.</div>
-			  <img src="img/event/minek.png"/>
+			  <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/minek.png"/>
                 <div class="actions">
 				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -120,8 +118,8 @@
 			  <i class="fa fa-venus fa-2x" aria-hidden="true"></i>
               <h2>Alice</h2>
               <!-- <div class="title title--epic">Tikus Mantap</div> -->
-			  <div class="desc">Halo aku Alis dari gugus 20.</div>
-			  <img src="img/event/alice.png"/>
+			  <div class="desc">Halo, aku Alis dari gugus 69</div>
+			  <img width="180" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/alice.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -134,7 +132,7 @@
               <h2>Aslam</h2>
               <!-- <div class="title title--epic">Tikus Gabut ter-Mantap</div> -->
 			  <div class="desc">Hy Mniez.</div>
-			  <img src="img/event/aslam.png"/>
+			  <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/aslam.png"/>
                 <div class="actions">
                 <button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
@@ -147,9 +145,8 @@
               <h2>Wilson</h2>
               <!-- <div class="title title--servicer">Tikus Wu</div> -->
               <div class="desc">我很好.</div>
-			  <img src="img/event/wilson.png"/>
+			  <img width="185" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/wilson.png"/>
                 <div class="actions">
-				<a href="https://github.com/wils446" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
 				<button></button>
                 <a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
@@ -161,7 +158,7 @@
               <h2>Reighpuy</h2>
               <!-- <div class="title title--servicer">Sarden</div> -->
               <div class="desc">Hah?</div>
-			<img src="img/event/dapi.png"/>
+			<img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/dapi.png"/>
                 <div class="actions">
                 <a href="https://instagram.com/muh.khadaffy" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
                 <a href="https://github.com/reighpuy" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
