--- a/galeri.html
+++ b/galeri.html
@@ -11,6 +11,9 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/bootstrap.min.css"/>
@@ -83,89 +86,170 @@
 				<div class="gallery-item fs-event">
 					<img src="img/event/fs-event-camp-1.png" alt="First_Event_Camp-1">
 					<div class="hover-links">
-						<p>Camp - 1</p>
+						<p><font size="+1">Camp - 1</p></font>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
 					<img src="img/event/fs-event-camp-2.png" alt="First_Event_Camp-2">
 					<div class="hover-links">
-						<p>Camp - 2</p>
+						<p><font size="+1">Camp - 2</p></font>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
 					<img src="img/event/lomba-racing-burlas.png" alt="First_Event_Racing">
 					<div class="hover-links">
-						<p>First Event - Racing</p>
+						<p><font size="+1">First Event - Racing</p></font>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
 					<img src="img/event/fs-event-racing-win.png" alt="First_Event_Racing-Winner">
 					<div class="hover-links">
-						<center><p>First Event - Racing Winner<br><font color="red">Shoukouu</font></p></center>
+						<center><p><font size="+1">First Event - Racing Winner</font><br><font size="+2" color="red">Shoukouu</font></p></center>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
 					<img src="img/event/fs-event-tanyajawab.png" alt="First_Event_TanyaJawab">
 					<div class="hover-links">
-						<center><p>First Event - Tanya Jawab</p></center>
+						<center><p><font size="+1">First Event - Tanya Jawab</p></center></font>
 					</div>
 				</div>
 				<div class="gallery-item fs-event">
 					<img src="img/event/fs-event-survivor.png" alt="First_Event_Survivor">
 					<div class="hover-links">
-						<center><p>First Event - Survivor</p></center>
+						<center><p><font size="+1">First Event - Survivor</p></center></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-1.png" alt="17an-Gambar-1">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Onetime#8401</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Onetime#8401</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-2.png" alt="17an-Gambar-2">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Verox1#0000</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Verox1#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-3.png" alt="17an-Gambar-3">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Imnoob#5424</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Imnoob#5424</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-4.png" alt="17an-Gambar-4">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Daniimuts#0000</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Daniimuts#0000</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-5.png" alt="17an-Gambar-5">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Adamjuz#9960</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Adamjuz#9960</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-6.png" alt="17an-Gambar-6">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Angelmnzz#3256</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1"color="red">Angelmnzz#3256</p></font></center>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-7.png" alt="17an-Gambar-7">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Spieky#0000</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Spieky#0000</p></center></font>
 					</div>
 				</div>
 				<div class="gallery-item 17an">
 					<img src="img/event/lomba-gambar-8.png" alt="17an-Gambar-8">
 					<div class="hover-links">
-						<center><p>17an -  Menggambar dengan Surat, <br>By <font color="red">Yama#2676</p></font></center>
+						<center><p><font size="+1">17an -  Menggambar dengan Surat, </font><br>By <font size="+1" color="red">Yama#2676</p></center></font>
 					</div>
 				</div>
 			</div>
 		</div>
+		<br><br><br><br><h2>Carousel</h2><br>
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-item">
+			  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			  <li data-target="#myCarousel" data-slide-to="1"></li>
+			  <li data-target="#myCarousel" data-slide-to="2"></li>
+			  <li data-target="#myCarousel" data-slide-to="3"></li>
+			  <li data-target="#myCarousel" data-slide-to="4"></li>
+			  <li data-target="#myCarousel" data-slide-to="5"></li>
+			  <li data-target="#myCarousel" data-slide-to="6"></li>
+			  <li data-target="#myCarousel" data-slide-to="7"></li>
+			  <li data-target="#myCarousel" data-slide-to="8"></li>
+			  <li data-target="#myCarousel" data-slide-to="9"></li>
+			  <li data-target="#myCarousel" data-slide-to="10"></li>
+			  <li data-target="#myCarousel" data-slide-to="11"></li>
+			  <li data-target="#myCarousel" data-slide-to="12"></li>
+			  <li data-target="#myCarousel" data-slide-to="13"></li>
+			</ol>
+		  
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner">
+			  <div class="item active">
+				<img width="800" height="200" src="img/event/fs-event-camp-1.png" alt="First_Event_Camp-1">
+				<!-- <div class="carousel-caption">
+				  <h3>Camp 1</h3>
+				  <h3>Event : First Event</h3>
+				</div> -->
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/fs-event-camp-2.png" alt="First_Event_Camp-2">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-racing-burlas.png" alt="First_Event_Racing">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/fs-event-racing-win.png" alt="First_Event_Racing-Winner">
+
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/fs-event-tanyajawab.png" alt="First_Event_TanyaJawab">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/fs-event-survivor.png" alt="First_Event_Survivor">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-1.png" alt="Onetime#8401">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-2.png" alt="Verox1#0000">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-3.png" alt="Imnoob#5424">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-4.png" alt="Daniimuts#0000">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-5.png" alt="Adamjuz#9960">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-6.png" alt="Angelmnzz#3256">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-7.png" alt="Spieky#0000">
+			  </div>
+			  <div class="item">
+				<img width="800" height="200" src="img/event/lomba-gambar-8.png" alt="Yama#2676">
+			  </div>
+			</div>
+		  
+			<!-- Left and right controls -->
+			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			  <span class="glyphicon glyphicon-chevron-left"></span>
+			  <span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" data-slide="next">
+			  <span class="glyphicon glyphicon-chevron-right"></span>
+			  <span class="sr-only">Next</span>
+			</a>
+		  </div><br><br><br>
 		<!-- Page section end-->
 	</div>
 
