--- a/kontak.html
+++ b/kontak.html
@@ -69,7 +69,7 @@
 			  <div class="desc">Cintamu, Senyaman Mentari Pagi...</div>
 			  <img width="170" height="180" src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/mia.png"/>
                 <div class="actions">
-					<button></button>
+					<h3><font color="#beb9b9">????</h3></font>
                 	<a href="https://cheese.formice.com/transformice/mouse/mia26%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -82,7 +82,7 @@
 			  <div class="desc">Nurut atau saya kick</div>
 			  <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/brendod.png"/>
                 <div class="actions">
-                	<button></button>
+                	<h3><font color="#beb9b9">????</h3></font>
                 	<a href="https://cheese.formice.com/transformice/mouse/spieky%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
@@ -95,8 +95,8 @@
 			  <div class="desc">Aku ndak suka ABR</div>
 			    <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/ruru.png"/>
                 <div class="actions">
-				<button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/ruru%231623" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+					<h3><font color="#beb9b9">????</h3></font>
+                	<a href="https://cheese.formice.com/transformice/mouse/ruru%231623" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -108,8 +108,8 @@
 			  <div class="desc">Sandi.</div>
 			  <img width="170" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/minek.png"/>
                 <div class="actions">
-				<button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+					<h3><font color="#beb9b9">????</h3></font>
+                	<a href="https://cheese.formice.com/transformice/mouse/jasminevza%230451" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -121,8 +121,8 @@
 			  <div class="desc">Halo, aku Alis dari gugus 69</div>
 			    <img width="180" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/alice.png"/>
                 <div class="actions">
-                <button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<h3><font color="#beb9b9">????</h3></font>
+                	<a href="https://cheese.formice.com/transformice/mouse/alicekwkland%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -134,8 +134,8 @@
 			  <div class="desc">Hy Mniez.</div>
 			    <img width="150" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/aslam.png"/>
                 <div class="actions">
-                <button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+                	<h3><font color="#beb9b9">????</h3></font>
+                	<a href="https://cheese.formice.com/transformice/mouse/aslaaaam%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -147,8 +147,8 @@
               <div class="desc">我很好.</div>
 			    <img width="185" height="200" img src="https://raw.githubusercontent.com/miawuu/miawuu.github.io/master/img/curut/wilson.png"/>
                 <div class="actions">
-				<button></button>
-                <a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+					<h3><font color="#beb9b9">????</h3></font>
+                	<a href="https://cheese.formice.com/transformice/mouse/verox1%230000" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
                 </div>
             </div>
 		</div>
@@ -165,7 +165,7 @@
 				<a href="https://cheese.formice.com/transformice/mouse/reighpuy%231257" target="_blank"><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
 				</div>
             </div>
-        </div>
+        </div><br>
     <!---->
 	</div>
 
